Cambio de titulo

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hotel Reservas</title>
+    <title>HotelBookingPRO</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Hotel Reservas</h1>
+        <h1>Bienvenido a HotelBookingPRO</h1>
         <nav>
             <a href="#servicios">Servicios</a> |
             <a href="#galeria">Galería</a> |
