--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
             <a href="#servicios">Servicios</a> |
             <a href="#galeria">Galería</a> |
             <a href="#testimonios">Testimonios</a> |
-            <a href="#contacto">Contacto</a>
+            <a href="#contacto">Contacto</a> |
+            <a href="/registro">Registrarse</a>
         </nav>
     </header>
     <section>
